Fix incorrect patch (35fe7dab8) for KaTeX overflow in quick search
The `position: relative` should be applied to each search result, not
on the searchResults container as a whole.

Otherwise, if there are 1-2 items (such that the total height of the
quick search box is less than the max height of searchResults), then
the overflow will still happen. To replicate this, you can search for
"Partialbruchzerlegung Berechnung" on production data with prior
commits.

--- a/frontend/src/components/Navbar/QuickSearch/QuickSearchResult.module.css
+++ b/frontend/src/components/Navbar/QuickSearch/QuickSearchResult.module.css
@@ -46,6 +46,7 @@
   overflow-y: hidden;
   mask-image: linear-gradient(180deg, #000 80px, transparent);
   -webkit-mask-image: linear-gradient(180deg, #000 80px, transparent);
+  position: relative;
 }
 
 .selected {
